pf/html/admin/style.css
#graph{
    margin:20px;
    text-align:center;
}

img {
    border:none;
}

body {
    margin: 0;
    font-family: arial, geneva, lucida, sans-serif;
    font-size: 8pt;
    font-family: Tahoma, sans-serif;
    font-size: 12px;
    color: #666;
    background: url('../images/header.repeat.jpg') #FFF repeat-x top;
}

a:link, a:visited {
    text-decoration:none;
    color: #444;

}

td.topnav {
    margin: 0;
    padding: 0;
    vertical-align: middle;
}

div.topnav {
    padding: 0 0 0 20px;
    no_width: 600px;
}

div.topnav UL {
    display: inline;
    margin: 0;
    padding: 0;
    height: 40px;
    border-left: 1px solid #3F2844;
} 

div.topnav UL LI:first-child a {
    border-left: 1px solid #ddccb5;
}

div.topnav UL LI {	
    display: block;
    margin: 0;
    padding: 0;
    float: left;
    height: 40px;
    border-right: 1px solid #BFABC6;
    border-right: 1px solid #2f2400;
    text-transform: uppercase;
}

div.topnav ul li a:link,
div.topnav ul li a:visited,
div.topnav ul li a:active {
    display: block;
    height: 27px;
    color: #FFF;
    padding: 13px 15px 0;
    text-decoration: none;
    border-right: 1px solid #ddccb5;
    white-space: nowrap;
    float: left;
}

div.topnav ul li a:hover,
div.topnav ul li.active a {
    background-color: #1fa7d5;
}

div.subnav {
    white-space: nowrap;
    position:relative;
    margin:0;
    height: 25px;
    padding-left: 40px;
}

td.subnav{
    white-space: nowrap;
}

span.logout {
    float: right;
    line-height: 40px;
    margin: 0;
}

span.logout a {
    white-space: nowrap;
    margin-right: 10px;
    color: #999;
    font-size: 8pt;
}

span.logout a:hover {
    color: #fff;
}

div.subnav UL {
    white-space: nowrap;
    list-style: none;
    margin: 0 0 0px 13px;
    padding: 0px;
} 

div.subnav LI {
    position:relative;
    display: block;
    margin: 0;
    padding: 0;
    float:left;
    width:auto;
}

div.subnav A:visited {
    color:white;
}

div.subnav A  {
    border-bottom: 1px solid transparent;
    color: white;
    display:block;
    width:auto;
    text-decoration: none;
    text-transform: lowercase;
    margin: 3px 10px;
    padding: 0;
    font-size: 10pt;
}

div.subnav A:active,
div.subnav LI A.current {
    border-bottom: 1px solid #fff;
}


div.subnav A:hover {
    border-bottom: 1px dotted #fff;
}


div.subnav BR, div.topnav BR {
    clear:both;
}

span#show_icon,
span#hide_icon {
    float: left;
    text-align: center;
}

span#searchform {
    float: right;
    vertical-align: bottom;
}

table#main {
    padding: 0 5%;
}

#content {
    height:100%;
    width: 100%;
    margin-top: 10px;
}

#content table.data_table { 
    border-collapse:collapse;
    margin-left: auto;
    margin-right: auto;
    margin-bottom:15px;
    font-size:9pt;
}

td.content{
    white-space: nowrap;
    line-height: 18px;
}

#content td {
    padding-right: 5px;
}

div#container {
    margin: 0;
    background: url('../images/footer.repeat.jpg') repeat-x bottom;
    padding-bottom: 8px;
}

#footer td {
    line-height: 2em;
}

#footer A.inactive{
    border: 1px solid #9BC6FF;
    padding: 2px 4px;
    color: #333;
}

#footer A.active {
    color: #000;
}

#footer A:hover {
    color: #333;
    border-bottom: 1px dotted #333;
}

#footer A.inactive:hover {
    background-color: #C9C6FF;
    border-bottom: 1px dotted #9BC6FF;
}

#footer select {
    background-color:#dddddd;
}

#result_count{
    font-size:9pt;
    text-align: center;
    font-weight:bold;
    color: black;
    padding:10px;
}

tr.header{
    color: #444;
    font-weight:bold;
}

td.header A:hover {
    border-bottom: 1px dotted #333;
}

td.action {
    line-height: 1em;
    vertical-align: middle;
    width: 70px;
}

/* We have more icons on the action bar there */
#configuration-violation td.action {
    width: 84px;
}

td.action form {
    display: inline;
}

td.action INPUT,
td.action A {
    display: none;
}

#content tr:hover td.action INPUT.button,
#content tr:hover td.action A {
    display: inline;
    height: 16px;
    margin: 0;
    padding: 0 0 0 2px;
}

#content tbody tr {
    border-top: 1px solid #ccc;
}

DIV#add,
DIV#login {
    text-align: center;
    margin-top: 25px;
}

DIV#login table,
DIV#add table {
    padding: 5px;
    border-top: 1px solid #fff;
    border-left: 1px solid #fff;
    border-bottom: 1px solid #aaa;
    border-right: 1px solid #aaa;
    border: 1px solid #aaa;
    background:#f7f7f7;
    margin: auto;
}

DIV#login table {
    margin-bottom: 50px;
}

#add td {
    text-align: right;
    white-space: nowrap;
}

.help_heading{
    background:#dddddd;
    color:white;
}

.help_content{
    background:#bbbbbb;
}


no#login table {
    width:550px;
    height:500px;
    border: 1px solid #bbbbbb;
    border-spacing:0;
    background: #f7f7f7;

}

#content tbody tr.data:hover {
    background: #d0e4f0;
    cursor: default;
}

#status table{
    margin-top: 13px;
    border-collapse:collapse;	
}


#status tr.content{
    background: #f7f7f7;
}

#status td.system{
    text-align:center;
    padding:10px;
    border-right: 1px solid #aaa;
}


#status td.services{
    padding:10px;
}

#status td.startservice{
    padding:5px;
    background:#70BE73;
}

#status td.stopservice{
    padding:5px;
    background:#EB4D33;
}

#history table{
    font-size:9pt;
}

#history table.main{
    margin:8px;
    padding:10px;
    font-size:10pt;
    border: 1px solid #bbbbbb;
    background: #f7f7f7;
}

#history a:hover {
    color:#bbbbbb;
}

#history td.contents{
    border-left: 1px solid #aaa;
    padding-left: 10px;
}

#history tr.title{
    text-align: right;
    font-size:9pt;
}

#history tr.heading{
    text-align: center;
    font-weight:bold;
    font-size:10pt;
}

ul#subnavlist {
    display:none;
    background: url('../images/header.selected.png') transparent no-repeat 5px 3px;
    margin-top: -5px;
    padding-top: 10px;
    position: absolute;
}

ul#subnavlist li { 
    float: none;
    background-color: #aaa;
    padding: 2px;
}

ul#subnavlist li a {
    padding: 0px;
    margin: 0px;
}

ul#navlist li ul#subnavlist li {
    white-space:nowrap;
    nodisplay: block;
    border:1px solid #aaa;
    noborder-bottom: 1px solid transparent;
    noborder: 0;
    nopadding: 3px;
    width: 150px;
}
ul#navlist li ul#subnavlist li a {
    nodisplay: inline;
    border: 0;
    padding: 3px;
}

ul#navlist li ul#subnavlist li a:hover {
    border-bottom: 1px dotted #fff;
    border: 0;
    background-color: #bbb;
}

ul#navlist li:hover ul#subnavlist  {
    display: block;
}

#pf_status{
    margin-top:20px;
}

#pf_status table.main{
    margin:20px;
    padding:20px;
    border:1px solid #aaa;
    background:#f7f7f7;
}

#pf_status tr.header{
    background:#bbbbbb;
}

#pf_status tr.even{
    background:#dddddd;
}

#pf_status tr.odd{
    background:#f7f7f7;
}

#pf_status span.title{
    font-size:large;
}

#pf_status span.subtitle{
    text-align:center;
}

#vital_desc{
    display:inline-block;
    width:100px;
}

#pf_status td.vitals_desc{
    white-space:nowrap;
    padding-right:10px;
}


#vital_data{
    width:170px; 
    text-align:right; 
    display:inline;
}


#pf_status table.stats{
    border:1px solid black;
    border-collapse:collapse;
    margin-bottom:20px;
    width:100%;
}

#pf_status td.header{
    text-align:center;
    height:25px;
    width: 30%;
    white-space: nowrap;
    padding-left:5px;
    border:1px solid black;
    font-weight:bold;
}

#pf_status td.left{
    white-space: nowrap;
    height:25px;
    white-space: nowrap;
    padding-left:5px;
}

#pf_status{
    padding-left:5px;
    padding-right:5px;
}

#pf_status td.vitals_data{
    width:100%;
    text-align:right;
}

#pf_status td.right{
    width:33%;
    border-right:1px solid black;
    white-space: nowrap;
    text-align:right;
    height:25px;
    padding-right:5px;
}


#error{
    padding:10px;
    text-align:center;
    background:#FF7575;
}

#message_box{
    margin:10px;
    margin-left:5%;
    margin-right:5%;
    padding:10px;
    border:1px solid #aaa;
    background:#f7f7f7;
    text-align:center;
    vertical-align:middle;
}

#message_box a:hover{
    color:#aaa;
}

tr.admin_left{
    background: #bbbbbb;
    border:1px solid #aaa;
    padding:5px;
}

#vital_desc{
    vertical-align:top;
}

#percent_bar{          
    border:1px solid black;
    width: 100px;
    display:inline-block;
    position: relative;
    height:16px;
}             

#percent_bar div{    
    height: 100%;
    display:inline-block;
    position:absolute;
    left:0px;
    top:0px;            
}

#percent_bar span{
    position:absolute;
    width:100px;
    text-align:center;
    left:0px;
    top:0px;
}

/* popup */

body.popup {
    background-color: #eee;
    background-image: none;
}

body.popup h1 {
    background-color: #1fa7d5;
    color: #fff;
    font-size: 14px;
    line-height: 2em;
    margin-top: 0;
    text-align: center;
}

body.popup DIV#content {
    height: auto;
    width: auto;
}

body.popup table {
    background-color: #fff;
    width: 350px;
}

body.popup table thead th {
    background-color: #eee;
}

body.popup table th {
    text-align: left;
}

body.popup tr.button td {
    background-color: #eee;
    border-top: 2px solid #2f2400;
    padding-top: 10px;
    text-align: right;
}

/* Fancy configuration table */
table.configuration td {
    vertical-align: top;
}

table.configuration td.left {
    padding-left: 30px;
    padding-top: 30px;
}

table.configuration ul {
    margin: 0px;
    padding-left: 0px;
}

table.configuration li {
    background: #F7F7F7;
    border-left: 1px solid #AAA;
    border-right: 1px solid #AAA;
    border-bottom: 1px solid #AAA;
    cursor: pointer;
    padding: 5px;
    width: 200px;
    display: block;
    font-size: 1.2em;
    font-weight: bold;
}

table.configuration a {
    display: block;
    color: #666; /* re-applying body color to override link color */
}

table.configuration li.top {
    border: 1px solid #AAA;
}

table.configuration li.selected {
    background: #DDDDDD;
}

td.buttonbar {
    background: #DDDDDD; 
    border: 1px solid #aaa;
    padding: 5px;
    text-align: right;
}

table.configuration li span.arrow {
    font-size: 0.8em;
    float: right;
}

